Rasummer/frontend updates (#801)

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@ description: Build powerful reactive, concurrent, and distributed applications i
             <p class="heroParagraph">Akka is a toolkit for building highly concurrent, distributed, and resilient message-driven applications for Java and Scala</p>
             <a href="#akkaInfo" class="btn sec mini-toggler">Why Akka?</a>
 
+
             {% comment %} 
                 Note that if you change this there is a duplicate list you need to change below, this is mobile only, below is desktop only
             {% endcomment %}
@@ -76,7 +77,8 @@ description: Build powerful reactive, concurrent, and distributed applications i
                     </span>
                 </li>
             </ul>
-            <a href="{{ site.baseurl }}/try-akka/" class="btn">Try Akka</a>
+            <a href="{{ site.baseurl }}/try-akka/" class="btn oss-track-link-label" data-category="OSS akka.io Clicks" data-label="Homepage Intro Section - [Try Akka]">Try Akka</a>
+            <a href="https://console.akkaserverless.com/p/register" class="btn oss-track-link-label" data-category="OSS akka.io Clicks" data-label="Homepage Intro Section - [Go Serverless]">Go Serverless</a>
             
             <p class="heroSmall">
                 Akka is <i>the</i> implementation of the <a href="https://doc.akka.io/docs/akka/current/guide/actors-motivation.html">Actor Model</a> on the JVM.
@@ -144,106 +146,133 @@ description: Build powerful reactive, concurrent, and distributed applications i
     </div>
 </section>
 
-<section class="wrapper prodUsers">
+<section class="wrapper sponsors">
     <div class="row">
-        <h1>Proven in production</h1>
-        <p>
-            Organizations with extreme requirements rely on Akka and other Lightbend technologies. Read about their experiences in
-            our <a href="https://www.lightbend.com/case-studies">case studies</a> and learn more about how Lightbend can contribute to success with its
-            <a href="https://www.lightbend.com/platform/production">commercial offerings</a>.
-        </p>
-
-        <!-- image map like solution that is responsive -->
-        {% assign hover_font_size = 25 %}
-        <figure height="400">
-            <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 2400 400" preserveAspectRatio="xMinYMin meet" >
-                <image width="2400" height="400" xlink:href="{{ site.baseurl }}/resources/images/logo-cloud.png"></image>
-                <!-- iHeart -->
-                <g class="hover_group" opacity="0">
-                    <a xlink:href="http://www.lightbend.com/case-studies/reactive-drives-innovation-in-streaming-music-industry">
-                        <text x="200" y="205">Go to case study</text>
-                        <rect x="1" y="1" opacity="0.2" fill="#FFFFFF" width="400" height="200"></rect>
-                    </a>
-                </g>
-                <!-- Credit Karma -->
-                <g class="hover_group" opacity="0">
-                    <a xlink:href="http://www.lightbend.com/case-studies/credit-karma-disrupts-credit-reporting-with-reactive-systems-and-fast-data">
-                        <text x="1000" y="180">Go to case study</text>
-                        <rect x="800" y="1" opacity="0.2" fill="#FFFFFF" width="400" height="200"></rect>
-                    </a>
-                </g>
-                <!-- Intel -->
-                <g class="hover_group" opacity="0">
-                    <!-- Credit Karma -->
-                    <a xlink:href="http://www.lightbend.com/case-studies/intels-gearpump-real-time-streaming-engine-using-akka">
-                        <text x="1400" y="230">Go to case study</text>
-                        <rect x="1200" y="1" opacity="0.2" fill="#FFFFFF" width="400" height="200"></rect>
-                    </a>
-                </g>
-                <!-- Hootsuite -->
-                <g class="hover_group" opacity="0">
-                    <!-- Credit Karma -->
-                    <a xlink:href="http://www.lightbend.com/case-studies/how-hootsuite-modernized-its-url-shortener">
-                        <text x="1800" y="180">Go to case study</text>
-                        <rect x="1600" y="1" opacity="0.2" fill="#FFFFFF" width="400" height="200"></rect>
-                    </a>
-                </g>
-                <!-- Norwegian Cruise Line -->
-                <g class="hover_group" opacity="0">
-                    <!-- Credit Karma -->
-                    <a xlink:href="http://www.lightbend.com/case-studies/norwegian-cruises-to-record-profits-with-reactive">
-                        <text x="2200" y="210">Go to case study</text>
-                        <rect x="2000" y="1" opacity="0.2" fill="#FFFFFF" width="400" height="200"></rect>
-                    </a>
-                </g>
-                <!-- Walmart -->
-                <g class="hover_group" opacity="0">
-                    <!-- Credit Karma -->
-                    <a xlink:href="http://www.lightbend.com/case-studies/walmart-boosts-conversions-by-20-with-lightbend-reactive-platform">
-                        <text x="600" y="380">Go to case study</text>
-                        <rect x="400" y="200" opacity="0.2" fill="#FFFFFF" width="400" height="200"></rect>
-                    </a>
-                </g>
-                <!-- Zalando -->
-                <g class="hover_group" opacity="0">
-                    <!-- Credit Karma -->
-                    <a xlink:href="http://www.lightbend.com/case-studies/zalando-meets-100x-traffic-spikes-with-a-smile-using-reactive-platform">
-                        <text x="1800" y="380">Go to case study</text>
-                        <rect x="1600" y="200" opacity="0.2" fill="#FFFFFF" width="400" height="200"></rect>
-                    </a>
-                </g>
-                <!-- Weightwatchers -->
-                <g class="hover_group" opacity="0">
-                    <!-- Credit Karma -->
-                    <a xlink:href="http://www.lightbend.com/case-studies/weight-watchers-accelerates-digital-transformation-with-lightbend">
-                        <text x="2200" y="380">Go to case study</text>
-                        <rect x="2000" y="200" opacity="0.2" fill="#FFFFFF" width="400" height="200"></rect>
-                    </a>
-                </g>
-            </svg>
-        </figure>
+        <h1>Sponsored by</h1>
+    </div>
+    <div class="row sponsor-logos">
+        <div class="fourcol">&nbsp;</div>
+        <div class="fourcol">
+            <a class="lightbend-sponsor-logo oss-track-link-label" href="https://www.lightbend.com" data-category="OSS akka.io Clicks" data-label="Sponsored By Section - Lightbend Logo">
+                <img src="resources/images/lightbend-full-color.svg">
+            </a>
+        </div>
+        <div class="fourcol">&nbsp;</div>
+    </div>
+    <div class="row">
+        <div class="onecol">&nbsp;</div>
+        <div class="tencol">
+            <p>Lightbend is the company behind Akka, used by development teams to build the most demanding, globally distributed, cloud native application environments and streaming data pipelines. Global 2000 enterprises turn to Lightbend products like <a href="https://www.lightbend.com/akka-serverless" class="oss-track-link-label" data-category="OSS akka.io Clicks" data-label="Sponsored By Section - Akka Serverless">Akka Serverless</a> and <a href="https://www.lightbend.com/akka-platform" class="oss-track-link-label" data-category="OSS akka.io Clicks" data-label="Sponsored By Section - Akka Platform">Akka Platform</a> to support their most business-critical initiatives.</p>
+        </div>
+        <div class="onecol">&nbsp;</div>
+    </div>
+    <div class="row">
+        <div class="onecol">&nbsp;</div>
+        <div class="fivecol">
+            <div class="akka-lightbend-promo">
+                <a href="https://www.lightbend.com/akka-serverless" class="logo-link oss-track-link-label" data-category="OSS akka.io Clicks" data-label="Promo Panel - Akka Serverless - Logo Link">
+                    <img src="resources/images/akka-serverless-full-color.svg">
+                </a>
+                <p>Build stateful, high performance, back-end services and APIs on a powerful serverless PaaS</p>
+                <div>
+                    <a class="oss-track-link-label" data-category="OSS akka.io Clicks" data-label="Promo Panel - Akka Serverless - Documentation Link" href="https://developer.lightbend.com/docs/akka-serverless/index.html">Documentation</a>
+                    |
+                    <a class="oss-track-link-label" data-category="OSS akka.io Clicks" data-label="Promo Panel - Akka Serverless - Example Projects Link" href="https://www.lightbend.com/akka-serverless/developers#example-projects">Example Projects</a>
+                </div>
+            </div>
+        </div>
+        <div class="fivecol">
+            <div  class="akka-lightbend-promo">
+                <a href="https://www.lightbend.com/akka-platform" class="logo-link oss-track-link-label" data-category="OSS akka.io Clicks" data-label="Promo Panel - Akka Platform - Logo Link">
+                    <img src="resources/images/akka-platform-full-color.svg">
+                </a>
+                <p>Get the full power of Akka reactive microservices frameworks and runtimes on prem or in the cloud</p>
+                <div>
+                    <a class="oss-track-link-label" data-category="OSS akka.io Clicks" data-label="Promo Panel - Akka Platform - Documentation Link" href="https://developer.lightbend.com/docs/akka-platform-guide/index.html">Documentation</a>
+                    |
+                    <a class="oss-track-link-label" data-category="OSS akka.io Clicks" data-label="Promo Panel - Akka Platform - Example Projects Link" href="https://www.lightbend.com/akka-platform/developers#example-projects">Example Projects</a>
+                </div>
+            </div>
+        </div>
+        <div class="tonecol">&nbsp;</div>
 
     </div>
 </section>
 
-<section class="wrapper sponsors">
+<section class="wrapper prodUsers">
     <div class="row">
-        <h1>Generous sponsors</h1>
-    </div>
-    <div class="row sponsor-logos">
-        <div class="twocol">&nbsp;</div>
-        <div class="threecol">
-            <a href="https://lightbend.com">
-                <img src="resources/images/lightbend-full-color.svg">
-            </a>
+        <div class="onecol">&nbsp;</div>
+        <div class="tencol">
+            <h1>Proven in production</h1>
+            <p>Organizations with extreme requirements rely on Akka and other Lightbend technologies&mdash;read about some of the <a href="https://www.lightbend.com/case-studies" data-category="OSS akka.io Clicks" data-label="Proven in Production Section - successful journeys and case studies link">successful journeys and case studies</a> from Lightbend customers.</p>
         </div>
         <div class="onecol">&nbsp;</div>
-        <div class="threecol">
-            <a href="https://triplequote.com">
-                <img src="resources/images/triplequote-inverted.png">
-            </a>
+    </div>
+    <div class="row">
+        <div class="twelvecol">
+            <div class="logo-grid">
+
+                <span>
+                    <img src="{{ site.baseurl }}/resources/images/user-logos/user-logo-bp.svg"/>
+                </span>
+                <a href="https://www.lightbend.com/case-studies/real-time-decision-making-for-auto-loans">
+                    <img src="{{ site.baseurl }}/resources/images/user-logos/user-logo-capital-one.svg"/>
+                </a>
+                <a href="https://www.lightbend.com/case-studies/scaling-handles-massive-traffic-spikes-with-ease">
+                    <img src="{{ site.baseurl }}/resources/images/user-logos/user-logo-dream-11.svg"/>
+                </a>
+                <a href="https://www.lightbend.com/case-studies/how-eero-disrupts-consumer-wifi-with-highly-reliable-systems-powered-by-akka-and-reactive">
+                    <img src="{{ site.baseurl }}/resources/images/user-logos/user-logo-eero.svg"/>
+                </a>
+                <span>
+                    <img src="{{ site.baseurl }}/resources/images/user-logos/user-logo-epic-games.svg"/>
+                </span>
+                <span>
+                    <img src="{{ site.baseurl }}/resources/images/user-logos/user-logo-gm.svg"/>
+                </span>
+                <span>
+                    <img src="{{ site.baseurl }}/resources/images/user-logos/user-logo-ing.svg"/>
+                </span>
+                <span>
+                    <img src="{{ site.baseurl }}/resources/images/user-logos/user-logo-intuit.svg"/>
+                </span>
+                <span>
+                    <img src="{{ site.baseurl }}/resources/images/user-logos/user-logo-linkedin.svg"/>
+                </span>
+                <a href="https://www.lightbend.com/case-studies/norwegian-cruises-to-record-profits-with-reactive">
+                    <img src="{{ site.baseurl }}/resources/images/user-logos/user-logo-ncl.svg"/>
+                </a>
+                <a href="https://www.lightbend.com/case-studies/paypal-blows-past-1-billion-transactions-per-day-using-just-8-vms-and-akka-scala-kafka-and-akka-streams">
+                    <img src="{{ site.baseurl }}/resources/images/user-logos/user-logo-paypal.svg"/>
+                </a>
+                <span>
+                    <img src="{{ site.baseurl }}/resources/images/user-logos/user-logo-rogers.svg"/>
+                </span>
+                <span>
+                    <img src="{{ site.baseurl }}/resources/images/user-logos/user-logo-schlumberger.svg"/>
+                </span>
+                <span>
+                    <img src="{{ site.baseurl }}/resources/images/user-logos/user-logo-shopify.svg"/>
+                </span>
+                <span>
+                    <img src="{{ site.baseurl }}/resources/images/user-logos/user-logo-starbucks.svg"/>
+                </span>
+                <span>
+                    <img src="{{ site.baseurl }}/resources/images/user-logos/user-logo-telsa.svg"/>
+                </span>
+                <span>
+                    <img src="{{ site.baseurl }}/resources/images/user-logos/user-logo-the-weather-channel.svg"/>
+                </span>
+                <a href="https://www.lightbend.com/case-studies/americas-largest-telecommunications-provider-goes-reactive">
+                    <img src="{{ site.baseurl }}/resources/images/user-logos/user-logo-verizon.svg"/>
+                </a>
+
+                
+            </div>
         </div>
-        <div class="twocol">&nbsp;</div>
+    </div>
+
+
     </div>
 </section>
 
