--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ description: Build powerful reactive, concurrent, and distributed applications i
 
 <section class="wrapper sponsors">
     <div class="row">
-        <h1>Sponsored by</h1>
+        <h1>Built by</h1>
     </div>
     <div class="row sponsor-logos">
         <div class="fourcol">&nbsp;</div>
