--- a/try-akka/index.html
+++ b/try-akka/index.html
@@ -9,40 +9,109 @@ title: Try Akka
 {% include topbar.html %}
 <section class="wrapper tryAkkaHero">
   <div class="row">
-    <h1>Try Akka {{ page.current_akka_version }} today</h1>
+    <h1>Try Akka today</h1>
     <div class="headerContainer"></div>
   </div>
 </section>
 
 <section class="wrapper tryAkkaContent">
   <div class="row">
-    <h2>It's quick and easy to get started with Akka</h2>
-
-    <p>
-      Akka provides APIs for Java and Scala. Both support the full range of Akka features to provide a great
-      development experience building concurrent and distributed systems.
-    </p>
-    <p>
-      Lightbend Tech Hub generates a variety of zipped examples that you can build and run with Maven, Gradle or sbt.
-      Start with the Hello World example project to get acquainted with Akka basics.
-    </p>
+    <div class="twelvecol">
+      <h2>Get started with Akka fast</h2>
+      <p>Akka provides APIs for Java and Scala and supports Maven, Gradle, and sbt for building concurrent and distributed systems. Options for using Akka technologies for application development include:</p>
+      <ul class="bullets">
+        <li>The do-it-yourself (DIY) method </li>
+        <li>Deploying and billing through cloud providers like AWS and GCP</li>
+        <li>Akka Serverless, managed by Lightbend</li>
+      </ul>
+    </div>
+  </div>
+  <div class="row">
+    <div class="twelvecol">
+      <h2>Manage Akka yourself (DIY)</h2>
+      <p>Many of us want to explore and manage things on our own, so we have a <a class="oss-track-link-label" data-category="OSS akka.io Clicks" data-label="Try Akka - Inline Link - guided tutorial" href="https://developer.lightbend.com/docs/akka-platform-guide/microservices-tutorial/index.html">guided tutorial</a> for building a microservices proof-of-concept application with various Akka modules. The tutorial is from the <a class="oss-track-link-label" data-category="OSS akka.io Clicks" data-label="Try Akka - Inline Link - Akka Platform Guide" href="https://developer.lightbend.com/docs/akka-platform-guide/index.html">Akka Platform Guide</a>, which provides details for using the Akka Operator for Kubernetes and other features for becoming successful with Akka in your team. </p>
+      <p><i>Want to go deep into the fundamentals of Akka? Learn about <strong>Akka Actors</strong> in <a class="oss-track-link-label" data-category="OSS akka.io Clicks" data-label="Try Akka - Inline Link - Scala" href="https://developer.lightbend.com/guides/akka-quickstart-scala/">Scala</a> and <a class="oss-track-link-label" data-category="OSS akka.io Clicks" data-label="Try Akka - Inline Link - Java" href="https://developer.lightbend.com/guides/akka-quickstart-java/">Java</a>.</i></p>
+    </div>
+  </div>
+  <div class="row buffer-row">
+    <div class="twelvecol tryAkkaBtns">
+      <br>
+      <a class="oss-track-link-label btn" data-category="OSS akka.io Clicks" data-label="Try Akka - CTA Button - Try Akka with Scala or Java"  href="https://developer.lightbend.com/docs/akka-platform-guide/microservices-tutorial/index.html">Try Akka with Scala or Java</a>
+    </div>
+  </div>
+  <div class="row">
+    <div class="twelvecol">
+      <h2>Manage Akka through your cloud provider</h2>
+      <p>Many teams would prefer to have Akka deployed and billed directly through their existing cloud provider. If you’re looking to deploy Akka to AWS or GCP, Lightbend provides <a class="oss-track-link-label" data-category="OSS akka.io Clicks" data-label="Try Akka - Inline Link - Akka Cloud Platform" href="https://www.lightbend.com/akka-cloud-platform">Akka Cloud Platform</a>–the organization-friendly way to utilize the power of Akka in a simpler, pay-as-you-go billing method.</p>
+    </div>
+  </div>
+  <div class="row center buffer-row">
+    <div class="onecol">&nbsp;</div>
+    <div class="fivecol">
+        <div class="akka-lightbend-promo cloud-provider">
+            <a href="https://aws.amazon.com/marketplace/pp/prodview-cfpp7sft2d6mi" class="logo-link oss-track-link-label" data-category="OSS akka.io Clicks" data-label="Try Akka - Promo Panel - Logo Link - AWS">
+                <img src="../resources/images/aws.svg">
+            </a>
+            <div>
+                <a class="oss-track-link-label" data-category="OSS akka.io Clicks" data-label="Try Akka - Promo Panel - Link - Amazon Marketplace" href="https://aws.amazon.com/marketplace/pp/prodview-cfpp7sft2d6mi">Amazon Marketplace</a>
+                |
+                <a class="oss-track-link-label" data-category="OSS akka.io Clicks" data-label="Try Akka - Promo Panel - Link - Documentation (AWS Install)" href="https://developer.lightbend.com/docs/akka-platform-guide/deployment/aws-index.html">Documentation</a>
+            </div>
+        </div>
+      </div>
+      <div class="fivecol">
+        <div class="akka-lightbend-promo cloud-provider">
+            <a href="https://console.cloud.google.com/marketplace/details/lightbend-public/akka-cloud-platform?rif_reserved" class="logo-link oss-track-link-label" data-category="OSS akka.io Clicks" data-label="Try Akka - Promo Panel - Logo Link - Google Cloud">
+                <img src="../resources/images/google-cloud.svg">
+            </a>
+            <div>
+                <a class="oss-track-link-label" data-category="OSS akka.io Clicks" data-label="Try Akka - Promo Panel - Link - Google Marketplace" href="https://console.cloud.google.com/marketplace/details/lightbend-public/akka-cloud-platform?rif_reserved">Google Marketplace</a>
+                |
+                <a class="oss-track-link-label" data-category="OSS akka.io Clicks" data-label="Try Akka - Promo Panel - Link - Documentation (GCP Install)" href="https://developer.lightbend.com/docs/akka-platform-guide/deployment/gcp-install.html">Documentation</a>
+            </div>
+        </div>
+    </div>
+    <div class="onecol">&nbsp;</div>
   </div>
 
   <div class="row">
-    <div class="twelvecol tryAkkaBtns">
-      <h2>Choose your language</h2>
-      <a class="btn scala" href="https://developer.lightbend.com/guides/akka-quickstart-scala">Scala</a>
-      <a class="btn java" href="https://developer.lightbend.com/guides/akka-quickstart-java">Java</a>
+    <div class="twelvecol">
+      <h2>Akka Serverless, managed by Lightbend</h2>
+      <p>For a cutting edge serverless experience, we have <a class="oss-track-link-label" data-category="OSS akka.io Clicks" data-label="Try Akka - Inline Link - Akka Serverless" href="https://www.lightbend.com/akka-serverless">Akka Serverless</a>–it’s run by Lightbend and free to try. Akka Serverless let’s you just focus on your code and removes distractions like managing databases and infrastructure. It uniquely brings the power of advanced data models to the serverless world for use cases like for IoT, telemedicine, real-time financial systems, streaming media and gaming, and more. </p>
     </div>
   </div>
 
-  <div class="row">
-    <h2>More</h2>
-
-    <p>
-      The above example is a great introduction to Akka Actors. You find more guides and samples at <a href="https://developer.lightbend.com/start/?group=akka">developer.lightbend.com</a>.
-    </p>
+  <div class="row center buffer-row">
+    <div class="threecol">&nbsp;</div>
+    <div class="sixcol">
+        <div class="akka-lightbend-promo">
+            <a href="https://www.lightbend.com/akka-serverless" class="logo-link oss-track-link-label" data-category="OSS akka.io Clicks" data-label="Try Akka - Promo Panel - Logo Link - Akka Serverless">
+                <img src="../resources/images/akka-serverless-full-color.svg">
+            </a>
+            <div>
+              <a class="oss-track-link-label" data-category="OSS akka.io Clicks" data-label="Try Akka - Promo Panel - Akka Serverless - Link - Free Account" href="https://console.akkaserverless.com/p/register">Free Account</a>
+               |
+              <a class="oss-track-link-label" data-category="OSS akka.io Clicks" data-label="Try Akka - Promo Panel - Akka Serverless - Link - Documentation" href="https://developer.lightbend.com/docs/akka-serverless/index.html">Documentation</a>
+            </div>
+        </div>
+    </div>
+    <div class="threecol">&nbsp;</div>
   </div>
+
+  
+
+  <div class="row">
+    <div class="twelvecol">
+      <h2>Talk to an Akka expert</h2>
+      <p>Akka is built by Lightbend, and employs a team of Akka engineers to help you succeed. If you’re looking for an expert to engage with your team or organization, contact Lightbend to find out more.</p>
+    </div>
+  </div>
+  <div class="row">
+    <div class="twelvecol tryAkkaBtns">
+      <a data-category="OSS akka.io Clicks" data-label="Try Akka - CTA Button - Talk to an Expert" class="btn" href="https://www.lightbend.com/contact">Talk to an expert</a>
+    </div>
+  </div>
+
 </section>
 
 {% include footermenu.html %}
