Try Akka wording (#816)

--- a/try-akka/index.html
+++ b/try-akka/index.html
@@ -20,8 +20,8 @@ title: Try Akka
       <h2>Get started with Akka fast</h2>
       <p>Akka provides APIs for Java and Scala and supports Maven, Gradle, and sbt for building concurrent and distributed systems. Options for using Akka technologies for application development include:</p>
       <ul class="bullets">
-        <li>The do-it-yourself (DIY) method </li>
-        <li>Deploying and billing through cloud providers like AWS and GCP</li>
+        <li>The completely do-it-yourself (DIY) method</li>
+        <li>Dependencies managed and billed through cloud providers like AWS and GCP</li>
         <li>Akka Serverless, managed by Lightbend</li>
       </ul>
     </div>
@@ -42,7 +42,7 @@ title: Try Akka
   <div class="row">
     <div class="twelvecol">
       <h2>Manage Akka through your cloud provider</h2>
-      <p>Many teams would prefer to have Akka deployed and billed directly through their existing cloud provider. If you’re looking to deploy Akka to AWS or GCP, Lightbend provides <a class="oss-track-link-label" data-category="OSS akka.io Clicks" data-label="Try Akka - Inline Link - Akka Cloud Platform" href="https://www.lightbend.com/akka-cloud-platform">Akka Cloud Platform</a>–the organization-friendly way to utilize the power of Akka in a simpler, pay-as-you-go billing method.</p>
+      <p>Many teams would prefer to have their Akka-powered application, and its dependencies, deployed and billed directly through their existing cloud provider. If you’re looking to deploy Akka to AWS or GCP, Lightbend provides <a class="oss-track-link-label" data-category="OSS akka.io Clicks" data-label="Try Akka - Inline Link - Akka Cloud Platform" href="https://www.lightbend.com/akka-cloud-platform">Akka Cloud Platform</a>–the organization-friendly way to utilize the power of Akka in a simpler, pay-as-you-go billing method.</p>
     </div>
   </div>
   <div class="row center buffer-row">
