Marketing updates feb 2022 (#839)

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ description: Build powerful reactive, concurrent, and distributed applications i
     <div class="row">
         <div class="sixcol">
             <h1 class="bright">Build powerful reactive, concurrent, and distributed applications more easily</h1>
-            <p class="heroParagraph">Akka is a toolkit for building highly concurrent, distributed, and resilient message-driven applications for Java and Scala</p>
+            <p class="heroParagraph">Akka is a toolkit for building highly concurrent, distributed, and resilient message-driven applications for Java and Scala. <br><br>Akka Insights is intelligent monitoring and observability purpose built for Akka.</p>
             <a href="#akkaInfo" class="btn sec mini-toggler">Why Akka?</a>
 
 
@@ -78,7 +78,7 @@ description: Build powerful reactive, concurrent, and distributed applications i
                 </li>
             </ul>
             <a href="{{ site.baseurl }}/try-akka/" class="btn oss-track-link-label" data-category="OSS akka.io Clicks" data-label="Homepage Intro Section - [Try Akka]">Try Akka</a>
-            <a href="https://console.akkaserverless.lightbend.com/p/register" class="btn oss-track-link-label" data-category="OSS akka.io Clicks" data-label="Homepage Intro Section - [Go Serverless]">Go Serverless</a>
+            <a href="https://www.lightbend.com/akka-insights" class="btn oss-track-link-label" data-category="OSS akka.io Clicks" data-label="Homepage Intro Section - [Akka Insights]">Akka Insights</a>
 
             <p class="heroSmall">
                 Akka is <i>the</i> implementation of the <a href="https://doc.akka.io/docs/akka/current/typed/guide/actors-motivation.html">Actor Model</a> on the JVM.
@@ -167,8 +167,7 @@ description: Build powerful reactive, concurrent, and distributed applications i
         <div class="onecol">&nbsp;</div>
     </div>
     <div class="row">
-        <div class="onecol">&nbsp;</div>
-        <div class="fivecol">
+        <div class="fourcol">
             <div class="akka-lightbend-promo">
                 <a href="https://www.lightbend.com/akka-serverless" class="logo-link oss-track-link-label" data-category="OSS akka.io Clicks" data-label="Promo Panel - Akka Serverless - Logo Link">
                     <img src="resources/images/akka-serverless-full-color.svg">
@@ -181,7 +180,7 @@ description: Build powerful reactive, concurrent, and distributed applications i
                 </div>
             </div>
         </div>
-        <div class="fivecol">
+        <div class="fourcol">
             <div  class="akka-lightbend-promo">
                 <a href="https://www.lightbend.com/akka-platform" class="logo-link oss-track-link-label" data-category="OSS akka.io Clicks" data-label="Promo Panel - Akka Platform - Logo Link">
                     <img src="resources/images/akka-platform-full-color.svg">
@@ -194,7 +193,19 @@ description: Build powerful reactive, concurrent, and distributed applications i
                 </div>
             </div>
         </div>
-        <div class="tonecol">&nbsp;</div>
+        <div class="fourcol">
+            <div  class="akka-lightbend-promo">
+                <a href="https://www.lightbend.com/akka-insights" class="logo-link oss-track-link-label" data-category="OSS akka.io Clicks" data-label="Promo Panel - Akka Insights - Logo Link">
+                    <img src="resources/images/akka-insights-full-color.svg">
+                </a>
+                <p>Intelligent monitoring and observability purpose built for Akka.</p>
+                <div>
+                    <a class="oss-track-link-label" data-category="OSS akka.io Clicks" data-label="Promo Panel - Akka Insights - Learn More Link" href="https://www.lightbend.com/akka-insights">Learn More</a>
+                    |
+                    <a class="oss-track-link-label" data-category="OSS akka.io Clicks" data-label="Promo Panel - Akka Insights - Talk to an Expert Link" href="https://www.lightbend.com/akka-insights#form-section">Talk to an Expert</a>
+                </div>
+            </div>
+        </div>
 
     </div>
 </section>
