--- a/try-akka/index.html
+++ b/try-akka/index.html
@@ -76,8 +76,32 @@ title: Try Akka
 
   <div class="row">
     <div class="twelvecol">
-      <h2>Akka Serverless, managed by Lightbend</h2>
-      <p>For a cutting edge serverless experience, we have <a class="oss-track-link-label" data-category="OSS akka.io Clicks" data-label="Try Akka - Inline Link - Akka Serverless" href="https://www.lightbend.com/akka-serverless">Akka Serverless</a>–it’s run by Lightbend and free to try. Akka Serverless let’s you just focus on your code and removes distractions like managing databases and infrastructure. It uniquely brings the power of advanced data models to the serverless world for use cases like for IoT, telemedicine, real-time financial systems, streaming media and gaming, and more. </p>
+      <h2>Akka Insights</h2>
+      <p>Akka Insights provides intelligent monitoring and observability for deep visibility into applications built using Akka, Lagom and Play. Add Akka Insights to your existing Akka applications without having to make any changes to application code. Discover, understand and troubleshoot complex relationships within your distributed services. Because Akka Insights is built by Lightbend, version support is always guaranteed.</p>
+    </div>
+  </div>
+
+  <div class="row center buffer-row">
+    <div class="threecol">&nbsp;</div>
+    <div class="sixcol">
+        <div class="akka-lightbend-promo">
+            <a href="https://www.lightbend.com/akka-insights" class="logo-link oss-track-link-label" data-category="OSS akka.io Clicks" data-label="Try Akka - Promo Panel - Logo Link - Akka Insights">
+                <img src="../resources/images/akka-insights-full-color.svg">
+            </a>
+            <div>
+              <a class="oss-track-link-label" data-category="OSS akka.io Clicks" data-label="Try Akka - Promo Panel - Akka Insights - Link - Learn More" href="https://www.lightbend.com/akka-insights">Learn More</a>
+               |
+              <a class="oss-track-link-label" data-category="OSS akka.io Clicks" data-label="Try Akka - Promo Panel - Akka Insights - Link - Documentation" href="https://developer.lightbend.com/docs/telemetry/current/home.html">Documentation</a>
+            </div>
+        </div>
+    </div>
+    <div class="threecol">&nbsp;</div>
+  </div>
+
+  <div class="row">
+    <div class="twelvecol">
+      <h2>Akka Serverless, developer PaaS</h2>
+      <p>For a cutting edge experience, try <a class="oss-track-link-label" data-category="OSS akka.io Clicks" data-label="Try Akka - Inline Link - Akka Serverless" href="https://www.lightbend.com/akka-serverless">Akka Serverless</a>. Run by Lightbend and free to try, Akka Serverless let’s you just focus on code and removes distractions like managing databases and infrastructure. It uniquely brings the power of advanced data models to the serverless world for use cases like for IoT, telemedicine, real-time financial systems, streaming media and gaming, and more.</p>
     </div>
   </div>
 
