chore: More Kalix replacements (#850)

--- a/index.html
+++ b/index.html
@@ -162,21 +162,21 @@ description: Build powerful reactive, concurrent, and distributed applications i
     <div class="row">
         <div class="onecol">&nbsp;</div>
         <div class="tencol">
-            <p>Lightbend is the company behind Akka, used by development teams to build the most demanding, globally distributed, cloud native application environments and streaming data pipelines. Global 2000 enterprises turn to Lightbend products like <a href="https://www.lightbend.com/akka-serverless" class="oss-track-link-label" data-category="OSS akka.io Clicks" data-label="Sponsored By Section - Akka Serverless">Akka Serverless</a> and <a href="https://www.lightbend.com/akka-platform" class="oss-track-link-label" data-category="OSS akka.io Clicks" data-label="Sponsored By Section - Akka Platform">Akka Platform</a> to support their most business-critical initiatives.</p>
+            <p>Lightbend is the company behind Akka, used by development teams to build the most demanding, globally distributed, cloud native application environments and streaming data pipelines. Global 2000 enterprises turn to Lightbend products like <a href="https://kalix.io" class="oss-track-link-label" data-category="OSS akka.io Clicks" data-label="Sponsored By Section - Kalix">Kalix</a> and <a href="https://www.lightbend.com/akka-platform" class="oss-track-link-label" data-category="OSS akka.io Clicks" data-label="Sponsored By Section - Akka Platform">Akka Platform</a> to support their most business-critical initiatives.</p>
         </div>
         <div class="onecol">&nbsp;</div>
     </div>
     <div class="row">
         <div class="fourcol">
             <div class="akka-lightbend-promo">
-                <a href="https://www.lightbend.com/akka-serverless" class="logo-link oss-track-link-label" data-category="OSS akka.io Clicks" data-label="Promo Panel - Akka Serverless - Logo Link">
-                    <img src="resources/images/akka-serverless-full-color.svg">
+                <a href="https://kalix.io" class="logo-link oss-track-link-label" data-category="OSS akka.io Clicks" data-label="Promo Panel - Kalix - Logo Link">
+                    <img src="resources/images/kalix-logo-black.svg" style="margin-top: 18px; margin-bottom: 18px">
                 </a>
                 <p>Build stateful, high performance, back-end services and APIs on a powerful serverless PaaS</p>
                 <div>
-                    <a class="oss-track-link-label" data-category="OSS akka.io Clicks" data-label="Promo Panel - Akka Serverless - Documentation Link" href="https://developer.lightbend.com/docs/akka-serverless/index.html">Documentation</a>
+                    <a class="oss-track-link-label" data-category="OSS akka.io Clicks" data-label="Promo Panel - Kalix - Documentation Link" href="https://docs.kalix.io">Documentation</a>
                     |
-                    <a class="oss-track-link-label" data-category="OSS akka.io Clicks" data-label="Promo Panel - Akka Serverless - Example Projects Link" href="https://www.lightbend.com/akka-serverless/developers#example-projects">Example Projects</a>
+                    <a class="oss-track-link-label" data-category="OSS akka.io Clicks" data-label="Promo Panel - Kalix - Example Projects Link" href="https://docs.kalix.io/quickstart/index.html">Example Projects</a>
                 </div>
             </div>
         </div>
