--- a/try-akka/index.html
+++ b/try-akka/index.html
@@ -22,7 +22,7 @@ title: Try Akka
       <ul class="bullets">
         <li>The completely do-it-yourself (DIY) method</li>
         <li>Dependencies managed and billed through cloud providers like AWS and GCP</li>
-        <li>Akka Serverless, managed by Lightbend</li>
+        <li>Kalix, managed by Lightbend</li>
       </ul>
     </div>
   </div>
@@ -100,8 +100,8 @@ title: Try Akka
 
   <div class="row">
     <div class="twelvecol">
-      <h2>Akka Serverless, developer PaaS</h2>
-      <p>For a cutting edge experience, try <a class="oss-track-link-label" data-category="OSS akka.io Clicks" data-label="Try Akka - Inline Link - Akka Serverless" href="https://www.lightbend.com/akka-serverless">Akka Serverless</a>. Run by Lightbend and free to try, Akka Serverless let’s you just focus on code and removes distractions like managing databases and infrastructure. It uniquely brings the power of advanced data models to the serverless world for use cases like for IoT, telemedicine, real-time financial systems, streaming media and gaming, and more.</p>
+      <h2>Kalix, developer PaaS</h2>
+      <p>For a cutting edge experience, try <a class="oss-track-link-label" data-category="OSS akka.io Clicks" data-label="Try Akka - Inline Link - Kalix" href="https://kalix.io">Kalix</a>. Run by Lightbend and free to try, Kalix let’s you just focus on code and removes distractions like managing databases and infrastructure. It uniquely brings the power of advanced data models to the serverless world for use cases like for IoT, telemedicine, real-time financial systems, streaming media and gaming, and more.</p>
     </div>
   </div>
 
@@ -109,13 +109,13 @@ title: Try Akka
     <div class="threecol">&nbsp;</div>
     <div class="sixcol">
         <div class="akka-lightbend-promo">
-            <a href="https://www.lightbend.com/akka-serverless" class="logo-link oss-track-link-label" data-category="OSS akka.io Clicks" data-label="Try Akka - Promo Panel - Logo Link - Akka Serverless">
-                <img src="../resources/images/akka-serverless-full-color.svg">
+            <a href="https://kalix.io" class="logo-link oss-track-link-label" data-category="OSS akka.io Clicks" data-label="Try Akka - Promo Panel - Logo Link - Kalix">
+                <img src="../resources/images/kalix-logo-black.svg" style="margin-top: 18px; margin-bottom: 18px">
             </a>
             <div>
-              <a class="oss-track-link-label" data-category="OSS akka.io Clicks" data-label="Try Akka - Promo Panel - Akka Serverless - Link - Free Account" href="https://console.akkaserverless.com/p/register">Free Account</a>
+              <a class="oss-track-link-label" data-category="OSS akka.io Clicks" data-label="Try Akka - Promo Panel - Kalix - Link - Free Account" href="https://console.kalix.io/register">Free Account</a>
                |
-              <a class="oss-track-link-label" data-category="OSS akka.io Clicks" data-label="Try Akka - Promo Panel - Akka Serverless - Link - Documentation" href="https://developer.lightbend.com/docs/akka-serverless/index.html">Documentation</a>
+              <a class="oss-track-link-label" data-category="OSS akka.io Clicks" data-label="Try Akka - Promo Panel - Kalix - Link - Documentation" href="https://docs.kalix.io">Documentation</a>
             </div>
         </div>
     </div>
