remove certain logos

--- a/index.html
+++ b/index.html
@@ -299,10 +299,10 @@ description: Build powerful reactive, concurrent, and distributed applications i
         <div class="onecol">&nbsp;</div>
         <div class="tencol">
             <h2 class="h1">Proven in production</h2>
-            <p>Organizations with extreme requirements rely on Akka and other Lightbend technologies&mdash;read about
+            <p>Organizations with extreme requirements rely on Akka and other Lightbend technologies.<br /> Read about
                 some of the <a href="https://www.lightbend.com/case-studies" data-category="OSS akka.io Clicks"
                     data-label="Proven in Production Section - successful journeys and case studies link">successful
-                    journeys and case studies</a> from Lightbend customers.</p>
+                    journeys and case studies</a>.</p>
         </div>
         <div class="onecol">&nbsp;</div>
     </div>
@@ -313,9 +313,6 @@ description: Build powerful reactive, concurrent, and distributed applications i
                 <span>
                     <img src="{{ site.baseurl }}/resources/images/user-logos/user-logo-bp.svg" />
                 </span>
-                <a href="https://www.lightbend.com/case-studies/real-time-decision-making-for-auto-loans">
-                    <img src="{{ site.baseurl }}/resources/images/user-logos/user-logo-capital-one.svg" />
-                </a>
                 <a href="https://www.lightbend.com/case-studies/scaling-handles-massive-traffic-spikes-with-ease">
                     <img src="{{ site.baseurl }}/resources/images/user-logos/user-logo-dream-11.svg" />
                 </a>
@@ -323,9 +320,6 @@ description: Build powerful reactive, concurrent, and distributed applications i
                     href="https://www.lightbend.com/case-studies/how-eero-disrupts-consumer-wifi-with-highly-reliable-systems-powered-by-akka-and-reactive">
                     <img src="{{ site.baseurl }}/resources/images/user-logos/user-logo-eero.svg" />
                 </a>
-                <span>
-                    <img src="{{ site.baseurl }}/resources/images/user-logos/user-logo-epic-games.svg" />
-                </span>
                 <span>
                     <img src="{{ site.baseurl }}/resources/images/user-logos/user-logo-gm.svg" />
                 </span>
@@ -351,9 +345,7 @@ description: Build powerful reactive, concurrent, and distributed applications i
                 <span>
                     <img src="{{ site.baseurl }}/resources/images/user-logos/user-logo-schlumberger.svg" />
                 </span>
-                <span>
-                    <img src="{{ site.baseurl }}/resources/images/user-logos/user-logo-shopify.svg" />
-                </span>
+                
                 <span>
                     <img src="{{ site.baseurl }}/resources/images/user-logos/user-logo-starbucks.svg" />
                 </span>
